--- a/ProyectoPOO1/pom.xml
+++ b/ProyectoPOO1/pom.xml
@@ -24,10 +24,20 @@
          <artifactId>mssql-jdbc</artifactId>
          <version>9.4.0.jre8</version>
         </dependency>
+        
         <dependency>
             <groupId>unknown.binary</groupId>
             <artifactId>AbsoluteLayout</artifactId>
             <version>SNAPSHOT</version>
         </dependency>
+        
+        <!-- https://mvnrepository.com/artifact/com.itextpdf/itext-asian -->
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itext-asian</artifactId>
+            <version>5.2.0</version>
+        </dependency>
+
+
     </dependencies>
 </project>
